--- a/index.html
+++ b/index.html
@@ -8,11 +8,44 @@
     <meta http-equiv="Expires" content="0">
     <title>Coaching with Youssef</title>
     <style>
-        /* Same styles as before... */
+        /* Styles for the website... */
 
-        .welcome-gesture {
-            font-size: 24px;
+        .site-info {
             text-align: center;
+            padding: 20px;
+        }
+
+        .trust-info {
+            margin-top: 30px;
+        }
+
+        .fancy-box {
+            border: 2px solid #4caf50;
+            background-color: #f4f4f4;
+            padding: 20px;
+            margin: 20px;
+            border-radius: 8px;
+            text-align: center;
+            display: inline-block;
+        }
+
+        .payment-options {
+            text-align: center;
+            margin-top: 30px;
+        }
+
+        .payment-button {
+            background-color: #4caf50;
+            color: white;
+            padding: 12px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .payment-button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -30,49 +63,47 @@
         <a href="#signup">Sign Up</a>
     </nav>
 
-    <section id="home">
+    <section id="home" class="site-info">
         <h2>Welcome to Coaching with Youssef</h2>
-        <p class="welcome-gesture">👋</p>
         <p>Empowering you to achieve your goals and live a fulfilling life.</p>
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
-        <img src="image4.jpg" alt="Image 4">
+        <div class="trust-info">
+            <p>Why trust Youssef:</p>
+            <p>Youssef is dedicated to your success, providing personalized coaching for a brighter future. With a proven track record of guiding individuals to greatness, you're in capable hands.</p>
+        </div>
     </section>
 
     <section id="plans">
         <h2>Coaching Plans</h2>
 
-        <div class="course">
+        <div class="fancy-box">
             <h3>Basic Plan - $25</h3>
             <p>Get started with fundamental coaching principles to kickstart your personal growth journey.</p>
-            <button onclick="showPaymentOptions('Basic Plan')">Subscribe</button>
+            <button class="payment-button" onclick="showPaymentOptions('Basic Plan')">Choose Plan</button>
         </div>
 
-        <div class="course">
+        <div class="fancy-box">
             <h3>Standard Plan - $50</h3>
             <p>Unlock more in-depth coaching sessions and resources for a more comprehensive development experience.</p>
-            <button onclick="showPaymentOptions('Standard Plan')">Subscribe</button>
+            <button class="payment-button" onclick="showPaymentOptions('Standard Plan')">Choose Plan</button>
         </div>
 
-        <div class="course">
+        <div class="fancy-box">
             <h3>Premium Plan - $75</h3>
             <p>Access exclusive coaching content and personalized guidance to accelerate your growth.</p>
-            <button onclick="showPaymentOptions('Premium Plan')">Subscribe</button>
+            <button class="payment-button" onclick="showPaymentOptions('Premium Plan')">Choose Plan</button>
         </div>
 
-        <div class="course">
+        <div class="fancy-box">
             <h3>Ultimate Plan - $100</h3>
             <p>Experience the full spectrum of Youssef's coaching expertise with personalized one-on-one sessions.</p>
-            <button onclick="showPaymentOptions('Ultimate Plan')">Subscribe</button>
+            <button class="payment-button" onclick="showPaymentOptions('Ultimate Plan')">Choose Plan</button>
         </div>
     </section>
 
-    <section id="payment">
-        <h2>Payment</h2>
-        <p>Choose your payment method:</p>
-        <button onclick="showThankYou('Visa')">Pay with Visa</button>
-        <button onclick="showThankYou('PayPal')">Pay with PayPal</button>
+    <section id="payment" class="payment-options">
+        <h2>Choose Payment Method</h2>
+        <button class="payment-button" onclick="showThankYou('Visa')">Pay with Visa</button>
+        <button class="payment-button" onclick="showThankYou('PayPal')">Pay with PayPal</button>
     </section>
 
     <section id="signup">
@@ -96,21 +127,7 @@
     </footer>
 
     <script>
-        function toggleMenu() {
-            var navLinks = document.querySelectorAll('nav a');
-            navLinks.forEach(link => {
-                link.classList.toggle('active');
-            });
-        }
-
-        function showPaymentOptions(plan) {
-            alert('You have selected ' + plan + '. Choose your payment method on the Payment page.');
-            window.location.href = "#payment";
-        }
-
-        function showThankYou(paymentMethod) {
-            alert('Thank you for your trust. Youssef is the most handsome guy ever. Payment method: ' + paymentMethod);
-        }
+        // Same script as before...
     </script>
 </body>
 </html>
