--- a/index.html
+++ b/index.html
@@ -3,131 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>Coaching with Youssef</title>
-    <style>
-        /* Styles for the website... */
-
-        .site-info {
-            text-align: center;
-            padding: 20px;
-        }
-
-        .trust-info {
-            margin-top: 30px;
-        }
-
-        .fancy-box {
-            border: 2px solid #4caf50;
-            background-color: #f4f4f4;
-            padding: 20px;
-            margin: 20px;
-            border-radius: 8px;
-            text-align: center;
-            display: inline-block;
-        }
-
-        .payment-options {
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        .payment-button {
-            background-color: #4caf50;
-            color: white;
-            padding: 12px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .payment-button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>Life Coaching</title>
 </head>
 <body>
-    <header>
-        <h1>Coaching with Youssef</h1>
-        <p>Your journey to personal growth and development</p>
-    </header>
-
-    <nav>
-        <div class="menu-icon" onclick="toggleMenu()"></div>
-        <a href="#home" class="active">Home</a>
-        <a href="#plans">Coaching Plans</a>
-        <a href="#payment">Payment</a>
-        <a href="#signup">Sign Up</a>
-    </nav>
-
-    <section id="home" class="site-info">
-        <h2>Welcome to Coaching with Youssef</h2>
-        <p>Empowering you to achieve your goals and live a fulfilling life.</p>
-        <div class="trust-info">
-            <p>Why trust Youssef:</p>
-            <p>Youssef is dedicated to your success, providing personalized coaching for a brighter future. With a proven track record of guiding individuals to greatness, you're in capable hands.</p>
-        </div>
-    </section>
-
-    <section id="plans">
-        <h2>Coaching Plans</h2>
-
-        <div class="fancy-box">
-            <h3>Basic Plan - $25</h3>
-            <p>Get started with fundamental coaching principles to kickstart your personal growth journey.</p>
-            <button class="payment-button" onclick="showPaymentOptions('Basic Plan')">Choose Plan</button>
-        </div>
-
-        <div class="fancy-box">
-            <h3>Standard Plan - $50</h3>
-            <p>Unlock more in-depth coaching sessions and resources for a more comprehensive development experience.</p>
-            <button class="payment-button" onclick="showPaymentOptions('Standard Plan')">Choose Plan</button>
-        </div>
-
-        <div class="fancy-box">
-            <h3>Premium Plan - $75</h3>
-            <p>Access exclusive coaching content and personalized guidance to accelerate your growth.</p>
-            <button class="payment-button" onclick="showPaymentOptions('Premium Plan')">Choose Plan</button>
-        </div>
-
-        <div class="fancy-box">
-            <h3>Ultimate Plan - $100</h3>
-            <p>Experience the full spectrum of Youssef's coaching expertise with personalized one-on-one sessions.</p>
-            <button class="payment-button" onclick="showPaymentOptions('Ultimate Plan')">Choose Plan</button>
-        </div>
-    </section>
-
-    <section id="payment" class="payment-options">
-        <h2>Choose Payment Method</h2>
-        <button class="payment-button" onclick="showThankYou('Visa')">Pay with Visa</button>
-        <button class="payment-button" onclick="showThankYou('PayPal')">Pay with PayPal</button>
-    </section>
-
-    <section id="signup">
-        <h2>Sign Up for Exclusive Content</h2>
-        <form>
-            <label for="fname">First Name:</label>
-            <input type="text" id="fname" name="fname" required>
-
-            <label for="lname">Last Name:</label>
-            <input type="text" id="lname" name="lname" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <button type="submit">Sign Up</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Coaching with Youssef. All rights reserved.</p>
-    </footer>
-
-    <script>
-        // Same script as before...
-    </script>
+    <div class="container">
+        <h1>Welcome to Life Coaching</h1>
+        <p>Transform your life with our personalized coaching plans.</p>
+        <a href="signup.html">Sign Up</a>
+        <a href="signin.html">Sign In</a>
+    </div>
 </body>
 </html>
