--- a/payment.html
+++ b/payment.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Payment Information</h1>
-        <form id="paymentForm">
+        <form id="paymentForm" onsubmit="return validatePayment()">
             <label for="name">Full Name:</label>
             <input type="text" id="name" required>
             <label for="location">Location:</label>
@@ -20,8 +20,10 @@
                 <option value="visa">Visa</option>
                 <option value="paypal">PayPal</option>
             </select>
-            <button type="submit" onclick="processPayment()">Pay Now</button>
+            <button type="submit">Pay Now</button>
+            <p id="paymentError" class="error"></p>
         </form>
     </div>
 </body>
 </html>
+
