--- a/coaching_plans.html
+++ b/coaching_plans.html
@@ -1,5 +1,4 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,25 +11,53 @@
     <div class="container">
         <h1>Choose Your Coaching Plan</h1>
         <div class="plan" data-price="25">
-            <h2>Plan 1</h2>
-            <p>Details about Plan 1.</p>
+            <h2>Starter Plan</h2>
+            <p>Perfect for those looking to dip their toes into the world of life coaching. This plan includes:</p>
+            <ul>
+                <li>One 30-minute coaching session per week</li>
+                <li>Personalized goal setting</li>
+                <li>Email support between sessions</li>
+            </ul>
+            <p>Price: $25 per week</p>
             <button onclick="selectPlan(25)">Select Plan</button>
         </div>
         <div class="plan" data-price="50">
-            <h2>Plan 2</h2>
-            <p>Details about Plan 2.</p>
+            <h2>Standard Plan</h2>
+            <p>A comprehensive plan designed for steady progress and transformation. This plan includes:</p>
+            <ul>
+                <li>Two 45-minute coaching sessions per week</li>
+                <li>Customized action plans</li>
+                <li>Email and phone support between sessions</li>
+                <li>Access to exclusive resources</li>
+            </ul>
+            <p>Price: $50 per week</p>
             <button onclick="selectPlan(50)">Select Plan</button>
         </div>
         <div class="plan" data-price="75">
-            <h2>Plan 3</h2>
-            <p>Details about Plan 3.</p>
+            <h2>Premium Plan</h2>
+            <p>For those committed to accelerated personal growth and success. This plan includes:</p>
+            <ul>
+                <li>Three 1-hour coaching sessions per week</li>
+                <li>Intensive goal mapping and strategy sessions</li>
+                <li>Unlimited email and phone support</li>
+                <li>Access to premium workshops and events</li>
+            </ul>
+            <p>Price: $75 per week</p>
             <button onclick="selectPlan(75)">Select Plan</button>
         </div>
         <div class="plan" data-price="100">
-            <h2>Plan 4</h2>
-            <p>Details about Plan 4.</p>
+            <h2>Executive Plan</h2>
+            <p>An elite coaching experience for executives and leaders seeking peak performance. This plan includes:</p>
+            <ul>
+                <li>Four 1-hour coaching sessions per week</li>
+                <li>Strategic leadership coaching</li>
+                <li>24/7 priority support</li>
+                <li>Access to exclusive VIP events</li>
+            </ul>
+            <p>Price: $100 per week</p>
             <button onclick="selectPlan(100)">Select Plan</button>
         </div>
     </div>
 </body>
 </html>
+
