--- a/coaching_plans.html
+++ b/coaching_plans.html
@@ -1,3 +1,5 @@
+<!-- Replace the content in your coaching_plans.html file with the following code -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +14,7 @@
         <h1>Choose Your Coaching Plan</h1>
         <div class="plan" data-price="25">
             <h2>Starter Plan</h2>
-            <p>Perfect for those looking to dip their toes into the world of life coaching. This plan includes:</p>
+            <p>Perfect for those looking to start their life coaching journey:</p>
             <ul>
                 <li>One 30-minute coaching session per week</li>
                 <li>Personalized goal setting</li>
@@ -23,7 +25,7 @@
         </div>
         <div class="plan" data-price="50">
             <h2>Standard Plan</h2>
-            <p>A comprehensive plan designed for steady progress and transformation. This plan includes:</p>
+            <p>A comprehensive plan designed for steady progress and transformation:</p>
             <ul>
                 <li>Two 45-minute coaching sessions per week</li>
                 <li>Customized action plans</li>
@@ -35,7 +37,7 @@
         </div>
         <div class="plan" data-price="75">
             <h2>Premium Plan</h2>
-            <p>For those committed to accelerated personal growth and success. This plan includes:</p>
+            <p>For those committed to accelerated personal growth and success:</p>
             <ul>
                 <li>Three 1-hour coaching sessions per week</li>
                 <li>Intensive goal mapping and strategy sessions</li>
@@ -47,7 +49,7 @@
         </div>
         <div class="plan" data-price="100">
             <h2>Executive Plan</h2>
-            <p>An elite coaching experience for executives and leaders seeking peak performance. This plan includes:</p>
+            <p>An elite coaching experience for executives and leaders seeking peak performance:</p>
             <ul>
                 <li>Four 1-hour coaching sessions per week</li>
                 <li>Strategic leadership coaching</li>
@@ -61,3 +63,4 @@
 </body>
 </html>
 
+ 
